tests/ui/type-alias-impl-trait/invalid_impl_trait_in_assoc_ty.stderr
error: unconstrained opaque type
  --> $DIR/invalid_impl_trait_in_assoc_ty.rs:9:16
   |
LL |     type Foo = impl std::fmt::Debug;
   |                ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same impl

error[E0308]: mismatched types
  --> $DIR/invalid_impl_trait_in_assoc_ty.rs:12:28
   |
LL |     type Foo = impl std::fmt::Debug;
   |                -------------------- the expected opaque type
...
LL |         let x: Self::Foo = ();
   |                ---------   ^^ expected opaque type, found `()`
   |                |
   |                expected due to this
   |
   = note: expected opaque type `<() as Foo>::Foo`
                found unit type `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
